[workspace]
members = [
    "druid",
    "druid-shell",
    "druid-derive",
    "docs/book_examples",
    "druid/examples/web",
    "druid/examples/hello_web",
    "druid/examples/value_formatting",
    "lasagna",
    "druidinho",
]
default-members = [
    "druid",
    "druid-shell",
    "druid-derive",
    "lasagna",
    "druidinho",
]
