[workspace]
members = [
    "druid",
    "druid-shell",
    "druid-derive",
    "docs/book_examples",
    "druid/examples/web",
    "druid/examples/hello_web",
    "druid/examples/value_formatting",
]
default-members = [
    "druid",
    "druid-shell",
    "druid-derive",
]
[patch.crates-io]
piet-common = { path = '../piet/piet-common' }