[package]
name = "druid-derive"
version = "0.3.1"
license = "Apache-2.0"
authors = ["Druid authors"]
description = "derive impls for druid, a Rust UI toolkit."
repository = "https://github.com/xi-editor/druid"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.29"
quote = "1.0.6"
proc-macro2 = "1.0.17"

[dev-dependencies]
druid = { version = "0.6.0", path = "../druid" }

float-cmp = { version = "0.8.0", features = ["std"], default-features = false }
