[package]
name = "druid-derive"
version = "0.3.1"
license = "Apache-2.0"
authors = ["Druid authors"]
description = "derive impls for druid, a Rust UI toolkit."
repository = "https://github.com/linebender/druid"
edition = "2018"

[lib]
proc-macro = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
syn = "1.0.39"
quote = "1.0.7"
proc-macro2 = "1.0.19"

[dev-dependencies]
druid = { version = "0.6.0", path = "../druid" }

float-cmp = { version = "0.8.0", features = ["std"], default-features = false }
