[package]
name = "druid-derive"
version = "0.5.1"
license = "Apache-2.0"
authors = ["Druid authors"]
description = "derive impls for Druid, a Rust UI toolkit."
repository = "https://github.com/linebender/druid"
edition = "2018"

[lib]
proc-macro = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
syn = { version = "1.0.109", features = ["extra-traits"] }
quote = "1.0.37"
proc-macro2 = "1.0.89"

[dev-dependencies]
druid = { version = "0.8.3", path = "../druid" }
trybuild = "1.0"

float-cmp = { version = "0.9.0", features = ["std"], default-features = false }
