[package]
name = "druid-win-shell"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Windows-specific application shell used for druid toolkit."

[dependencies]
directwrite = "0.1.2"
direct2d = "0.2.0"
wio = "0.2"

lazy_static = "1.0"
time = "0.1.39"

[dependencies.winapi]
version = "0.3.6"
features = ["d2d1_1", "dwrite", "winbase", "libloaderapi", "errhandlingapi", "winuser", "shellscalingapi", "shobjidl", "combaseapi", "synchapi", "dxgi1_3", "dcomp", "d3d11", "dwmapi", "wincon", "fileapi", "processenv", "winbase", "handleapi"]
