[package]
name = "druid"
version = "0.7.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Data-oriented Rust UI design toolkit."
repository = "https://github.com/linebender/druid"
categories = ["gui"]
readme = "README.md"
keywords = ["gui", "ui", "toolkit"]
edition = "2018"

[package.metadata.docs.rs]
# The "svg" and "image" features have doc clashes that cause undefined output in docs.
# See https://github.com/rust-lang/cargo/issues/6313 for more information.
# Once cargo doc becomes smart enough to handle multiple versions of the same crate,
# the "svg" and "image" features should be enabled for the docs.rs output.
features = ["im"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"

[features]
default = ["gtk", "default-logger"]
gtk = ["druid-shell/gtk"]
image = ["druid-shell/image"]
svg = ["usvg", "harfbuzz-sys"]
x11 = ["druid-shell/x11"]
crochet = []
default-logger = ["simple_logger", "tracing-subscriber", "log", "console_log", "tracing-wasm", "console_error_panic_hook"]
serde = ["im/serde"]

# passing on all the image features. AVIF is not supported because it does not
# support decoding, and that's all we use `Image` for.
png = ["druid-shell/image_png"]
jpeg = ["druid-shell/jpeg"]
jpeg_rayon = ["druid-shell/jpeg_rayon"]
gif = ["druid-shell/gif"]
bmp = ["druid-shell/bmp"]
ico = ["druid-shell/ico"]
tiff = ["druid-shell/tiff"]
webp = ["druid-shell/webp"]
pnm = ["druid-shell/pnm"]
dds = ["druid-shell/dds"]
tga = ["druid-shell/tga"]
farbfeld = ["druid-shell/farbfeld"]
dxt = ["druid-shell/dxt"]
hdr = ["druid-shell/hdr"]

# Remember to update this when changing an image feature.
image-all = ["image", "svg", "png", "jpeg", "jpeg_rayon", "gif", "bmp", "ico", "tiff", "webp", "pnm", "dds", "tga", "farbfeld", "dxt", "hdr"]

[dependencies]
druid-shell = { version = "0.7.0", default-features = false, path = "../druid-shell" }
druid-derive = { version = "0.4.0", path = "../druid-derive" }

tracing = "0.1.22"
fluent-bundle = "0.12.0"
fluent-langneg = "0.13.0"
fluent-syntax = "0.9.3"
unic-langid = "0.9.0"
unicode-segmentation = "1.6.0"
xi-unicode = "0.3.0"
fnv = "1.0.7"
instant = { version = "0.1.6", features = ["wasm-bindgen"] }

# Optional dependencies
im = { version = "15.0.0", optional = true }
usvg = { version = "0.12.0", optional = true }
log = { version = "0.4.11", optional = true }
simple_logger = { version = "1.9.0", default-features = false, optional = true }
tracing-subscriber = { version = "0.2.15", optional = true }
# We don't depend directly on harfbuzz-sys, it comes through usvg. But we need to pin
# the version, because the latest release of harfbuzz_rs is broken with harfbuzz-sys 0.5.
harfbuzz-sys = { version = "0.4.0", optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
console_log = { version = "0.2.0", optional = true }
tracing-wasm = { version = "0.1.0", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
float-cmp = { version = "0.8.0", features = ["std"], default-features = false }
# tempfile 3.2.0 broke wasm; I assume it will be yanked (Jan 12, 2021)
tempfile = "=3.1.0"
piet-common = { version = "=0.3.2", features = ["png"] }
pulldown-cmark = { version = "0.8", default-features = false }
test-env-log = { version = "0.2.5", features = ["trace"], default-features = false }
tracing-subscriber = { version = "0.2.15" }

[target.'cfg(target_arch="linux")'.dev-dependencies]
druid-shell = { version = "*", features = ["gtk"], path = "../druid-shell" }

[[example]]
name = "anim"
required-features = ["default-logger"]

[[example]]
name = "async_event"
required-features = ["default-logger"]

[[example]]
name = "blocking_function"
required-features = ["default-logger"]

[[example]]
name = "calc"
required-features = ["default-logger"]

[[example]]
name = "cursor"
required-features = ["image", "png"]

[[example]]
name = "custom_widget"
required-features = ["default-logger"]

[[example]]
name = "either"
required-features = ["default-logger"]

[[example]]
name = "event_viewer"
required-features = ["default-logger"]

[[example]]
name = "flex"
required-features = ["default-logger"]

[[example]]
name = "game_of_life"
required-features = ["default-logger"]

[[example]]
name = "hello"
required-features = ["default-logger"]

[[example]]
name = "identity"
required-features = ["default-logger"]

[[example]]
name = "image"
required-features = ["image", "png"]

[[example]]
name = "invalidation"
required-features = ["im"]

[[example]]
name = "layout"
required-features = ["default-logger"]

[[example]]
name = "lens"
required-features = ["default-logger"]

[[example]]
name = "list"
required-features = ["im"]

[[example]]
name = "markdown_preview"
required-features = ["default-logger"]

[[example]]
name = "multiwin"
required-features = ["default-logger"]

[[example]]
name = "open_save"
required-features = ["default-logger"]

[[example]]
name = "panels"
required-features = ["default-logger"]

[[example]]
name = "scroll_colors"
required-features = ["default-logger"]

[[example]]
name = "scroll"
required-features = ["default-logger"]

[[example]]
name = "split_demo"
required-features = ["default-logger"]

[[example]]
name = "styled_text"
required-features = ["default-logger"]

[[example]]
name = "sub_window"
required-features = ["default-logger"]

[[example]]
name = "svg"
required-features = ["svg"]

[[example]]
name = "switches"
required-features = ["default-logger"]

[[example]]
name = "tabs"
required-features = ["im"]

[[example]]
name = "text"
required-features = ["default-logger"]

[[example]]
name = "timer"
required-features = ["default-logger"]

[[example]]
name = "view_switcher"
required-features = ["default-logger"]

[[example]]
name = "widget_gallery"
required-features = ["svg", "im", "image", "png"]
