[package]
name = "druidinho"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = { version = "0.7.0", default-features = false, path = "../druid-shell" }
