[package]
name = "xilem"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
edition = "2021"

[dependencies]
"druid-shell" = { path = "../druid-shell" }
bitflags = "1.3.2"
futures-task = "0.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
sha2 = "0.10"
hex = "0.4.3"
