[package]
name = "druid-web-example"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
druid = { path = "../../" }
druid-shell = { path = "../../druid-shell" }
kurbo = "0.2.1"
piet = "0.0.2"
wasm-bindgen = "0.2.38"

[dependencies.web-sys]
version = "0.3.15"
features = ["console"]
