[package]
name = "hello-wasm-web"
version = "0.1.0"
license = "Apache-2.0"
description = "Minimal wasm example for web"
repository = "https://github.com/xi-editor/druid"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
druid = { path="../.."}
wasm-bindgen = "0.2.60"
console_error_panic_hook = { version = "0.1.6" }
