[package]
name = "druid-web-examples"
version = "0.1.0"
license = "Apache-2.0"
description = "Scaffolding for Druid web examples"
repository = "https://github.com/linebender/druid"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
druid = { path="../..", features = ["im", "image", "png"] }
tracing = "0.1.40"
wasm-bindgen = "0.2.95"
console_error_panic_hook = "0.1.7"
log = "0.4.22"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
simple_logger = { version = "1.16.0", default-features = false }
